--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gsap": "^3.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.13.0",
     "split-type": "^0.3.3"
   },
   "devDependencies": {
